crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_code_invalid_code_suffix.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..12,
                codes: [
                    Code {
                        code: "F401",
                        range: 8..12,
                    },
                ],
            },
        ),
    ),
)
