crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_code_leading_comment.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 35..47,
                codes: [
                    (
                        "F401",
                        43..47,
                    ),
                ],
            },
        ),
    ),
)
