crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_code_leading_hashes.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 2..13,
                codes: [
                    Code {
                        code: "F401",
                        range: 9..13,
                    },
                ],
            },
        ),
    ),
)
