crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_code_leading_hashes_with_spaces.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 6..18,
                    codes: [
                        Code {
                            code: "F401",
                            range: 14..18,
                        },
                    ],
                },
            ),
        },
    ),
)
