crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_code_multi_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..13,
                codes: [
                    (
                        "F401",
                        9..13,
                    ),
                ],
            },
        ),
    ),
)
