crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_code_no_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..10,
                codes: [
                    "F401",
                ],
                code_ranges: [
                    6..10,
                ],
            },
        ),
    ),
)
