crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_codes_multi_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..20,
                codes: [
                    "F401",
                    "F841",
                ],
                code_ranges_full: [
                    9..13,
                    13..20,
                ],
            },
        ),
    ),
)
